service.yml
kind: Service
apiVersion: v1
metadata:
  name: jquery-service
  namespace: jquery
spec:
  selector:
    app: jquery-deployment
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
