ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jquery-ing
  namespace: jquery
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
  - host: k8-jquery.joshmc.xyz     
    http:
      paths:
      - path: 
        backend:
          serviceName: jquery-service
          servicePort: http
  tls:
  - hosts:
      - k8-jquery.joshmc.xyz
    secretName: jquery-secret
